# ilab_2year

./: .gitignore  README.md
ARC/: ARC.cpp  ARC.h  ARC.hpp  Makefile  gen.cpp  main.cpp  test.cpp  test.sh  test.txt
ARC/test/: 5.test
Cache/: comapre.sh  compare.sh
Cache/ARC/: ARC.h  ARC.hpp  Makefile  arc  check.sh  gen.cpp  main.cpp
Cache/perfect_cache/: Makefile  beladi  gg.txt  main.cpp  make_answ.sh  prfct.h  prfct.hpp
Graph/: CMakeLists.txt  Makefile  check.sh  main.cpp
Graph/answ/: 1.answ  2.answ  3.answ  4.answ  5.answ  7.answ
Graph/gtest/: my_test.cc
Graph/lib/: driver.h  graph.cpp  graph.h  lexer.l  parser.y
Graph/tests/: 1.test  10.test  2.test  3.test  4.test  5.test  6.test  7.test  8.test  9.test
Matrix/: .Makefile.swp  Makefile  NULL  check.sh  gen  gen.cpp  main.cpp  make_tests.sh  matrix  matrix.h  matrix.hpp
Matrix/answ/: 12.answ  20.answ
Matrix/gtest/: CMakeLists.txt  check.sh
Matrix/lib/: matrix.h  matrix.hpp
Matrix/scripts/: check.sh  make_tests.sh
Matrix/tests/: 11.test  12.test  13.test  14.test  15.test  16.test  17.test  18.test  19.test  20.test  3.test  5.test
Tree/: Makefile  gen.cpp  graph.dot  main.cpp  tree.h
Tree/answ/: 1.answ  10.answ  2.answ  3.answ  4.answ  5.answ  6.answ  7.answ  8.answ  9.answ
Tree/gtest/: graph.dot  my_test.cc  test
Tree/lib/: tree.h  tree.hpp
Tree/scripts/: check.sh  make_graph.sh
Tree/tests/: 1.test  (+8 more)
Triangle/: Makefile  all  check  file.txt  gen  gen.cpp  gg.txt  main  main.cpp  test.cpp  tmain.cpp  triangle  triangle.h  triangle.hpp
perfect_cache/: main.cpp  prfct.h
(+24 files in other folders)
